crates/atlas-runtime/tests/corpus/pass/modules/chained_import/middle.atl
// middle.atlas - imports from base, exports derived value
import { VALUE } from "./base";

export let DOUBLED: number = VALUE * 2;
