crates/atlas-runtime/tests/corpus/fail/modules/circular_import/b.atl
// b.atlas - imports from a (creates cycle)
import { a_val } from "./a";

export let b_val: number = a_val + 1;
